# moos-ivp-logan

./: .gitignore  README.md  clean.sh
data/PoseKeeping/27.9.2019/pPoseKeeping/shoreside/: targ_shoreside.moos
data/PoseKeeping/27.9.2019/poke_test/LOG_FELIX_27_9_2019_____18_46_07/: LOG_FELIX_27_9_2019_____18_46_07._moos  LOG_FELIX_27_9_2019_____18_46_07.slog  LOG_FELIX_27_9_2019_____18_46_07.ylog  targ_felix._bhv
data/lab17/LOG_ALPHA_22_7_2019_____13_56_27/: LOG_ALPHA_22_7_2019_____13_56_27._moos  LOG_ALPHA_22_7_2019_____13_56_27.slog  LOG_ALPHA_22_7_2019_____13_56_27.ylog  targ_alpha._bhv
data/lab17/LOG_BRAVO_22_7_2019_____13_53_38/: LOG_BRAVO_22_7_2019_____13_53_38._moos  LOG_BRAVO_22_7_2019_____13_53_38.slog  LOG_BRAVO_22_7_2019_____13_53_38.ylog  targ_bravo._bhv
missions/PoseKeeping/charles_river_mission/heron/: clean.sh  launch_vehicle.sh  meta_vehicle.bhv  meta_vehicle.moos
missions/PoseKeeping/charles_river_mission/shoreside/: launch_shoreside.sh  meta_shoreside.moos  scp.sh
missions/PoseKeeping/simulation_mission/: alpha.bhv  clean.sh  launch.sh  logan.moos
missions/PoseKeeping/simulation_mission/logfile/MOOSLog_23_9_2019_____13_45_46/: MOOSLog_23_9_2019_____13_45_46._moos  MOOSLog_23_9_2019_____13_45_46.ylog
missions/alder/: .LastOpenedMOOSLogDirectory  alder.bhv  alder.moos
missions/lab_07/alpha/: alpha.bhv  alpha.moos  moosdb_alpha.moos
missions/lab_07/bravo_loiter/: .LastOpenedMOOSLogDirectory  bravo.bhv  bravo.moos
missions/lab_07/bravo_loiter_dbl/: .LastOpenedMOOSLogDirectory  bravo.bhv  bravo.moos
missions/lab_07/bravo_loiter_uuv_1/: .LastOpenedMOOSLogDirectory  bravo.bhv  bravo.moos
missions/lab_07/bravo_uuv_surface/: .LastOpenedMOOSLogDirectory  bravo.bhv  bravo.moos
missions/lab_08/alpha_bravo_pshare/: .LastOpenedMOOSLogDirectory  alpha.bhv  alpha.moos  bravo.bhv  bravo.moos  shoreside.moos
missions/lab_08/alpha_pshare/s1_alpha/: .LastOpenedMOOSLogDirectory  bravo.moos  shoreside.moos
missions/lab_08/henry_gilda_baseline/: meta_shoreside.moos  meta_vehicle.bhv
missions/lab_08/henry_gilda_refuel/: meta_vehicle.bhv  meta_vehicle.moos  plug_uFldNodeBroker.moos
missions/lab_08/xrelay_pshare/: .LastOpenedMOOSLogDirectory  xrelay.moos  yrelay.moos
missions/lab_09/distributed_tsp/: launch.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos
missions/lab_09/distributed_tsp_replan/: meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_pGenPath.moos  plug_uFldNodeBroker.moos
missions/lab_11/charlie_dana_message/: meta_shoreside.moos  meta_vehicle.moos
missions/lab_11/charlie_dana_nodecomms/: meta_vehicle.moos
missions/lab_11/charlie_dana_reassign/: meta_vehicle.moos  plug_uFldNodeBroker.moos  plug_uTimerScript.moos
missions/lab_12/jake_kasper_baseline/: hazard_h.txt  hazards.txt  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_uFldNodeBroker.moos
missions/lab_14/alpha_range_pulse/: alpha.bhv  alpha.moos
missions/lab_14/alpha_zigleg/: alpha.bhv  alpha.moos
missions/lab_14/circle_sine/: alpha.bhv  alpha.moos
missions/lab_14/intermsg_two_vehicle/: alpha.moos  meta_shoreside.moos  meta_vehicle.bhv  plug_uFldMessageHandler.moos
missions/lab_14/two_lawnmower/: alpha.bhv  bhv_backup.txt  launch.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_uFldNodeBroker.moos  plug_uXMS.moos  shoreside_backup.txt
missions/lab_14/two_vehicle_mission/: launch.sh  meta_shoreside.moos  meta_vehicle.bhv
missions/lab_16/front_estimate/: meta_shoreside.moos
missions/uSimMarineX_HWGR/: charlie.bhv  charlie.moos
src/: CMakeLists.txt
src/lib_behaviors-alonzo/: BHV_Lawnmower.cpp  BHV_Lawnmower.h  BHV_Pulse.cpp  BHV_Pulse.h  BHV_ZigLeg.cpp  BHV_ZigLeg.h  BHV_circle_sine.cpp  BHV_circle_sine.h  BHV_rotate_lawnmower.cpp  BHV_rotate_lawnmower.h  BHV_sine.cpp  BHV_sine.h  BHV_test.cpp  BHV_test.h  CMakeLists.txt
src/pAngleDecision/: AngleDecision.cpp  AngleDecision.h  AngleDecision_Info.cpp  AngleDecision_Info.h  CMakeLists.txt  main.cpp  pAngleDecision.moos
src/pAngleDecision/copy/: AngleDecision.cpp  AngleDecision.h
src/pFFT_test/: .LastOpenedMOOSLogDirectory  CMakeLists.txt  FFT_test.cpp  FFT_test.h  FFT_test_Info.cpp  FFT_test_Info.h  main.cpp  pFFT_test.moos
src/pGenPath/: CMakeLists.txt  GenPath.cpp  GenPath.h  GenPath_Info.cpp  GenPath_Info.h  Mydata.cpp  Mydata.h  befen.cpp  eastwest.cpp  fuck.cpp  main.cpp
src/pNumberCal/: CMakeLists.txt  NumberCal.cpp  NumberCal.h  NumberCal_Info.cpp  NumberCal_Info.h  main.cpp  pNumberCal.moos
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp
src/pPointAssign/: .LastOpenedMOOSLogDirectory  CMakeLists.txt  Mydata.cpp  Mydata.h  PointAssign.cpp  PointAssign.h  PointAssign_Info.cpp  PointAssign_Info.h  eastwest.cpp  main.cpp
src/pPoseKeeping/: CMakeLists.txt  Mode.cpp  Mode.h  PoseKeeping.cpp  PoseKeeping.h  PoseKeeping_Info.cpp  PoseKeeping_Info.h  main.cpp
src/pPoseKeepingX/: CMakeLists.txt  Mode.cpp  Mode.h  PoseKeepingX.cpp  PoseKeepingX.h  PoseKeepingX_Info.cpp  PoseKeepingX_Info.h  PoseKeeping_Mode.cpp  main.cpp  pPoseKeepingX.moos
src/pPrimeFactor/: .LastOpenedMOOSLogDirectory  CMakeLists.txt  Mydata.cpp  Mydata.h  PrimeFactor.cpp  PrimeFactor.h  PrimeFactor_Info.cpp  PrimeFactor_Info.h  main.cpp  pPrimeFactor.moos
src/pRecordtest/: .LastOpenedMOOSLogDirectory  CMakeLists.txt  MSG.txt  Recordtest.cpp  Recordtest.h  Recordtest_Info.cpp  Recordtest_Info.h  ch1.txt  main.cpp  pRecordtest.moos
src/pStoreSound/: CMakeLists.txt  StoreSound.cpp  StoreSound.cpp.backup  StoreSound.h  StoreSound_Info.cpp  StoreSound_Info.h  main.cpp  pStoreSound.moos
src/pStoreSoundX/: .LastOpenedMOOSLogDirectory  CMakeLists.txt  StoreSoundX.cpp  StoreSoundX.h  StoreSoundX_Info.cpp  StoreSoundX_Info.h  main.cpp  pStoreSoundX.moos
src/uFldHazardMgrX/: HazardMgr.cpp  HazardMgr.h
src/uSimMarineX_HWGR/: CMakeLists.txt  HI_MIKE_README.txt  MOOSGeodesy.cpp  SimEngine.cpp  USM_Info.cpp  USM_MOOSApp.cpp  USM_MOOSApp.h  USM_Model.cpp  USM_Model.h
(+279 files in other folders)
